unpackaged/main/default/objects/ia_crm__Account_Balance_by_Entity__c/ia_crm__Account_Balance_by_Entity__c.object-meta.xml
<CustomObject>
    <description>Displays breakdown of customer balance by entity and in entity&#39;s base currency</description>
    <label>Account Balance by Entity</label>
    <nameField>
        <label>Intacct Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Balances by Entity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>