unpackaged/main/default/objects/ia_crm__Account_Balance_by_Entity__c/fields/ia_crm__Account__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Balances by Entity</relationshipLabel>
    <relationshipName>Customer_Balances_by_Entity</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>