unpackaged/main/default/objects/ia_crm__Account_Balance_by_Entity__c/fields/ia_crm__Balance__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Balance__c</fullName>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>