unpackaged/main/default/objects/ia_crm__Account_Balance_by_Entity__c/fields/ia_crm__External_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>